[tool.poetry]
name = "hello-rest-flask"
version = "0.1.0"
description = ""
authors = ["Jaeho Lee <jaeho.lee@snu.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
pylint = "^2.5.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
